# backend/src/modules/tierlist/tierlist.schemas.ts
@@ -1,67 +1,20 @@
-import T, { Static } from 'typebox';
+import T from 'typebox';
 
-import { TierList, TierListItem } from '@/modules/tierlist/tierlist.types';
+import {
+  FreshTierListSchema,
+  TierListSchema,
+} from '@/modules/tierlist/tierlist.types';
 
 export const ListenChannelParamsSchema = T.Object({
   name: T.String({ minLength: 1 }),
 });
 
-export const FreshTierListSchema = T.Object({
-  tiers: T.Record(
-    T.String({ minLength: 1, description: 'Name of the tier' }),
-    T.Object({
-      color: T.String({
-        minLength: 1,
-        description: 'Background color of the tier',
-      }),
-    }),
-    {
-      maxProperties: 50,
-    }
-  ),
-  items: T.Record(
-    T.String({ minLength: 1, description: 'Name of the item' }),
-    T.Object({
-      image_url: T.Optional(
-        T.String({ minLength: 1, description: 'An optional image URL' })
-      ),
-    }),
-    {
-      maxProperties: 500,
-    }
-  ),
+export const SetTierListRequest = T.Object({
+  tier_list: FreshTierListSchema,
 });
 
-export type FreshTierList = Static<typeof FreshTierListSchema>;
-
-export function tierListFromFreshTierList(tl: FreshTierList): TierList {
-  const tiers = Object.entries(tl.tiers).map(([name, { color }]) => ({
-    name,
-    color,
-  }));
-
-  const items = Object.entries(tl.items).reduce<Record<string, TierListItem>>(
-    (prev, [name, { image_url }]) => ({
-      ...prev,
-      [name]: {
-        imageUrl: image_url ?? null,
-        votes: {},
-      },
-    }),
-    {}
-  );
-
-  return {
-    tiers,
-    items,
-    isVoting: true,
-    focus: null,
-    version: Date.now(),
-  };
-}
-
-export const OverwriteTierListRequest = T.Object({
-  tier_list: FreshTierListSchema,
+export const SetTierListResponse = T.Object({
+  tier_list: TierListSchema,
 });
 
 export const FocusSchema = T.String({
